# watex

./: .editorconfig  .gitignore  Cargo.toml
src/: lexer.rs  lib.rs  macro_expander.rs  structures.rs  util.rs
src/macros/: builtin.rs  mod.rs  types.rs
tex_macro_attr/: Cargo.toml
tex_macro_attr/src/: lib.rs
