[package]
name = "tex_macro_attr"
version = "0.1.0"
edition = "2021"
description = "Procedurall (rust) macros for (LaTeX) macro creation for the WaTeX library."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1.0"
